Stabilize build
